# Process with automake to produce Makefile.in

SUBDIRS    = ffmpeg utils bio2jack libOSC libvjmsg libvjmem libvje libsample libvjnet libyuv libel libstream liblavjpeg plugins veejay tools man 

#bin_SCRIPTS = veejay-config

#
# Add any non autoconf'd files here, extra readmes and other misc 
# info to be copied into the dist
#
EXTRA_DIST = \
 autogen.sh\
 depcomp

 
